# wikijs-ldap-group-sync

./: .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
.github/workflows/: publish.yml
github/workflows/: publish.yml
tests/: test_wikijs_ldap_group_sync.py
wikijs_ldap_group_sync/: __main__.py  add_groups.py  classes.py  env.py  ldap_utils.py  util.py  wikijs_utils.py
wikijs_ldap_group_sync/util/: classes.py  env.py  ldap_utils.py  wikijs_utils.py
