[tool.poetry]
name = "wikijs-ldap-group-sync"
version = "0.1.0"
description = ""
authors = ["Florentin Schleuß <git@macbrayne.de>"]

[tool.poetry.dependencies]
python = "^3.8"
python-ldap = "^3.4.0"
graphqlclient = "^0.2.4"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
add_groups = "wikijs_ldap_group_sync.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
